--- a/metadata_generator.ipynb
+++ b/metadata_generator.ipynb
@@ -240,6 +240,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def try_multiple_delimiters(file_path):\n",
     "    \"\"\"\n",
     "    Attempts to read a file using different delimiters.\n",
@@ -247,13 +248,15 @@
     "    delimiters = ['\\t', ',', ';']  # Common delimiters to try\n",
     "    for delimiter in delimiters:\n",
     "        try:\n",
-    "            df = pd.read_csv(file_path, sep=delimiter, encoding='utf-8', on_bad_lines='skip', dtype={'PARTICIPANT_ID': str})\n",
+    "            df = pd.read_csv(file_path, sep=delimiter, encoding='utf-8', on_bad_lines='skip',\n",
+    "                             dtype={'PARTICIPANT_ID': str})\n",
     "            # If we get more than one column, we assume we have the right delimiter\n",
     "            if df.shape[1] > 1:\n",
     "                return df\n",
     "        except Exception as e:\n",
     "            pass  # Try the next delimiter\n",
     "    raise ValueError(\"Could not determine delimiter\")\n",
+    "\n",
     "\n",
     "def read_keystroke_data(samples_dir, output_csv='all_samples_combined1.csv', start_batch=1, end_batch=100):\n",
     "    \"\"\"\n",
@@ -349,9 +352,11 @@
     "\n",
     "    return full_data\n",
     "\n",
+    "\n",
     "# Example usage:\n",
     "samples_directory = \"samples\"  # Replace with your actual path\n",
-    "read_keystroke_data(samples_directory, output_csv='demographics_csv/part1_uncleaned_all.csv', start_batch=1, end_batch=1)"
+    "read_keystroke_data(samples_directory, output_csv='demographics_csv/part1_uncleaned_all.csv', start_batch=1,\n",
+    "                    end_batch=1)"
    ]
   },
   {
@@ -374,6 +379,7 @@
     "# Step 2: Clean the CSV file\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "\n",
     "def clean_csv(input_csv, output_csv):\n",
     "    \"\"\"\n",
@@ -402,6 +408,7 @@
     "    # Save the cleaned DataFrame to a new CSV file\n",
     "    cleaned_df.to_csv(output_csv, index=False)\n",
     "    print(f\"Cleaned data saved to {output_csv}\")\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "input_csv_path = 'demographics_csv/part1_uncleaned_all.csv'  # Replace with your actual input CSV path\n",
@@ -433,66 +440,49 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "def calculate_new_columns(group):\n",
-    "    # Create the new columns based on transformations of the KEYPRESS_ID\n",
-    "    group['D1U1'] = group['KEYSTROKE_ID'] * 1.1\n",
-    "    group['D1U2'] = group['KEYSTROKE_ID'] * 1.2\n",
-    "    group['D1U3'] = group['KEYSTROKE_ID'] * 1.3\n",
-    "    group['D1D2'] = group['KEYSTROKE_ID'] * 1.4\n",
-    "    group['D1D3'] = group['KEYSTROKE_ID'] * 1.5\n",
-    "    group['U1D2'] = group['D1U1'] - group['D1D2']\n",
-    "    \n",
-    "    # Calculate Z-scores for each of the columns\n",
-    "    for col in ['D1U1', 'D1U2', 'D1U3', 'D1D2', 'D1D3', 'U1D2']:\n",
-    "        group[f'{col}_Z_SCORE'] = (group[col] - group[col].mean()) / group[col].std()\n",
-    "    \n",
-    "    return group\n",
     "\n",
-    "def calculate_mean_values(df):\n",
-    "    # Calculate mean values for the columns\n",
-    "    mean_values = df.groupby('PARTICIPANT_ID').agg({\n",
-    "        'D1U1': 'mean',\n",
-    "        'D1U2': 'mean',\n",
-    "        'D1U3': 'mean',\n",
-    "        'D1D2': 'mean',\n",
-    "        'D1D3': 'mean',\n",
-    "        'U1D2': 'mean'\n",
-    "    }).reset_index()\n",
+    "def add_new_columns(input_csv, output_csv):\n",
+    "    \"\"\"\n",
+    "    Adds new columns to a CSV file for each participant and saves the updated data to a new CSV file.\n",
     "\n",
-    "    # Calculate the mean of Z-scores for each column\n",
-    "    z_score_columns = ['D1U1_Z_SCORE', 'D1U2_Z_SCORE', 'D1U3_Z_SCORE', 'D1D2_Z_SCORE', 'D1D3_Z_SCORE', 'U1D2_Z_SCORE']\n",
-    "    z_score_mean = df.groupby('PARTICIPANT_ID')[z_score_columns].mean().reset_index()\n",
-    "\n",
-    "    # Merge the mean values with the Z_SCORE mean values\n",
-    "    mean_values = pd.merge(mean_values, z_score_mean, on='PARTICIPANT_ID')\n",
-    "\n",
-    "    # Renaming the columns for clarity\n",
-    "    mean_values.columns = [\n",
-    "        'PARTICIPANT_ID', 'D1U1_MEAN', 'D1U2_MEAN', 'D1U3_MEAN',\n",
-    "        'D1D2_MEAN', 'D1D3_MEAN', 'U1D2_MEAN',\n",
-    "        'D1U1_Z_SCORE_MEAN', 'D1U2_Z_SCORE_MEAN', 'D1U3_Z_SCORE_MEAN',\n",
-    "        'D1D2_Z_SCORE_MEAN', 'D1D3_Z_SCORE_MEAN', 'U1D2_Z_SCORE_MEAN'\n",
-    "    ]\n",
-    "    \n",
-    "    return mean_values\n",
-    "\n",
-    "def process_keystroke_data(input_csv, output_csv):\n",
+    "    Parameters:\n",
+    "    - input_csv (str): The path to the input CSV file.\n",
+    "    - output_csv (str): The path to the output CSV file to save updated data.\n",
+    "    \"\"\"\n",
+    "    # Read the cleaned CSV file into a DataFrame\n",
     "    df = pd.read_csv(input_csv)\n",
-    "    \n",
-    "    # Apply the calculation to each participant group\n",
+    "\n",
+    "    # Define a function to calculate new columns for each participant\n",
+    "    def calculate_new_columns(group):\n",
+    "        group['D1U1'] = group['RELEASE_TIME'] - group['PRESS_TIME']\n",
+    "        group['D1U2'] = group['RELEASE_TIME'].shift(-1) - group['PRESS_TIME']\n",
+    "        group['D1U3'] = group['RELEASE_TIME'].shift(-2) - group['PRESS_TIME']\n",
+    "        group['D1D2'] = group['PRESS_TIME'].shift(-1) - group['PRESS_TIME']\n",
+    "        group['D1D3'] = group['PRESS_TIME'].shift(-2) - group['PRESS_TIME']\n",
+    "        group['U1D2'] = group['PRESS_TIME'].shift(-1) - group['RELEASE_TIME']\n",
+    "\n",
+    "        group['D1U1_MEAN'] = group['D1U1'].mean()\n",
+    "        group['D1U2_MEAN'] = group['D1U2'].mean()\n",
+    "        group['D1U3_MEAN'] = group['D1U3'].mean()\n",
+    "        group['D1D2_MEAN'] = group['D1D2'].mean()\n",
+    "        group['D1D3_MEAN'] = group['D1D3'].mean()\n",
+    "        group['U1D2_MEAN'] = group['U1D2'].mean()\n",
+    "\n",
+    "        group['Z_SCORE'] = (group['PRESS_TIME'] - group['PRESS_TIME'].mean()) / group['PRESS_TIME'].std()\n",
+    "        return group\n",
+    "\n",
+    "    # Apply the function to each participant group\n",
     "    df = df.groupby('PARTICIPANT_ID').apply(calculate_new_columns)\n",
-    "    \n",
-    "    # Calculate the mean values and mean Z-scores\n",
-    "    mean_values = calculate_mean_values(df)\n",
-    "    \n",
-    "    # Save the final results to a CSV file\n",
-    "    mean_values.to_csv(output_csv, index=False)\n",
-    "    print(f\"Final data saved to {output_csv}\")\n",
+    "\n",
+    "    # Save the updated DataFrame to a new CSV file\n",
+    "    df.to_csv(output_csv, index=False)\n",
+    "    print(f\"Updated data saved to {output_csv}\")\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "input_csv_path = 'demographics_csv/part1_cleaned_samples_combined.csv'  # Replace with your actual input CSV path\n",
-    "output_csv_path = 'demographics_csv/final5_keystroke_features.csv'  # Replace with your desired output CSV path\n",
-    "process_keystroke_data(input_csv_path, output_csv_path)\n"
+    "output_csv_path = 'demographics_csv/added_key_values.csv'  # Replace with your desired output CSV path\n",
+    "add_new_columns(input_csv_path, output_csv_path)"
    ],
    "metadata": {
     "collapsed": false,
@@ -518,6 +508,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def merge_with_metadata(keystroke_csv, metadata_csv, output_csv):\n",
     "    # Read the input CSV files\n",
     "    keystroke_df = pd.read_csv(keystroke_csv)\n",
@@ -529,6 +520,7 @@
     "    # Save the merged DataFrame to a new CSV file\n",
     "    merged_df.to_csv(output_csv, index=False)\n",
     "    print(f\"Merged data saved to {output_csv}\")\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "keystroke_csv_path = 'demographics_csv/final5_keystroke_features.csv'  # Replace with your actual keystroke CSV path\n",
@@ -553,6 +545,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def merge_all_csv_files(input_folder, output_csv):\n",
     "    # List to hold all DataFrames\n",
     "    all_dataframes = []\n",
@@ -570,6 +563,7 @@
     "    # Save the combined DataFrame to a new CSV file\n",
     "    combined_df.to_csv(output_csv, index=False)\n",
     "    print(f\"All data merged and saved to {output_csv}\")\n",
+    "\n",
     "\n",
     "# Example usage:\n",
     "input_folder_path = 'path/to/your/folder'  # Replace with your actual folder path\n",
