status for reference paper

--- a/age_prediction.ipynb
+++ b/age_prediction.ipynb
@@ -439,7 +439,7 @@
     "    plt.title('Confusion Matrix')\n",
     "    plt.xlabel('Predicted')\n",
     "    plt.ylabel('Actual')\n",
-    "    plt.savefig('confusion_matrix_knn.pdf', bbox_inches='tight')\n",
+    "    plt.savefig('cm_knn_agepred.pdf', bbox_inches='tight')\n",
     "    plt.close()\n",
     "\n",
     "    # Save confusion matrix as CSV\n",
@@ -453,12 +453,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-19T15:20:39.722614Z",
-     "start_time": "2025-01-19T15:20:27.849088Z"
+     "end_time": "2025-02-19T12:55:27.557610Z",
+     "start_time": "2025-02-19T12:55:07.920253Z"
     }
    },
    "id": "93b751e34c445d57",
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
