--- a/demographic_recognition.ipynb
+++ b/demographic_recognition.ipynb
@@ -1567,13 +1567,13 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2025-01-20T00:27:50.141932Z",
      "start_time": "2025-01-20T00:10:22.479972Z"
     }
    },
    "id": "603fcaca03a44f20",
-   "execution_count": null
+   "execution_count": 28
   },
   {
    "cell_type": "code",
